added social media scrapping workaround

--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,15 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-       
-    </dependencies>
 
+		
+
+  <!-- Thymeleaf -->
+	<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+    </dependencies>
 
 
     <packaging>war</packaging>
