--- a/pom.xml
+++ b/pom.xml
@@ -118,9 +118,16 @@
    	         <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-		
+
+   <!-- sendgrid -->
+     <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>2.1.1</version>
+        </dependency>		
     </dependencies>
+ 
 
-
+    
     <packaging>war</packaging>
 </project>
