--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@ src/main/java/com/bperalta/simpleblog/applicationContext-dgocean.xml
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
