--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-router": "0.x.x",
     "angular-sanitize":"1.4.x",
     "angular-bootstrap":"0.x.x",
-    "angulike":"1.2.0"
+    "angulike":"1.2.0",
+    "ng-file-upload":"11.0.x"
   }
 }
