updated upload file
upload file

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,5 @@ src/main/resources/public/assets/libs/bower_components
 src/main/java/com/bperalta/simpleblog/config.properties
 src/main/java/com/bperalta/simpleblog/applicationContext-aws.xml
 src/main/java/com/bperalta/simpleblog/applicationContext-dgocean.xml
-
-
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
+.*
+!.gitignore
