--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,10 @@
      	<groupId>org.springframework.security</groupId>
      	<artifactId>spring-security-ldap</artifactId>
      </dependency>
+     <dependency>
+     	<groupId>org.springframework.boot</groupId>
+     	<artifactId>spring-boot-starter-freemarker</artifactId>
+     </dependency>
     </dependencies>
  
 
